# Mini-Google-Drive

./: CMakeLists.txt  serverlist.txt
backend/: bigtable.cc  bigtable.h  bigtable_client.cc  bigtable_server.cc  master_server.cc  timer.cc  timer.h
httpserver/: consoleservlet.cpp  consoleservlet.h  emailservlet.cpp  emailservlet.h  fileioservlet.cpp  fileioservlet.h  httpclient.cpp  httpclient.h  httpcookie.cpp  httpcookie.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpsession.cpp  httpsession.h  loginservlet.cpp  loginservlet.h  main.cpp  servlet.cpp  servlet.h  servletmanager.cpp  servletmanager.h  storageservlet.cpp  storageservlet.h  tcpserver.cpp  tcpserver.h  tcpworker.cpp  tcpworker.h
httpserver/css/: send_email.css
httpserver/html/: email_common.html  email_forward1.html  email_forward2.html  email_new.html  email_reply1.html  email_reply2.html  home.html  storage_common.html  upload_file.html  upload_new.html
protos/: bigtable.proto
